# apis-rdf-devops

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Pipfile  Procfile  README.md  apis_core  apis_ontology  manage.py  pyproject.toml  start.sh  upgrade_deps.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md  question.md
.github/workflows/: build.yml  project.yml  update_submodules.yml
.gitlab/issue_templates/: bug_report.md  feature_request.md  question.md
.gitlab/merge_request_templates/: default_merge_request.md
.pycharm/: watchers.xml
apis/: urls.py  wsgi.py
apis/settings/: base.py  base_dev.py  jelinek.py  settings_test_ci.py  tibschol.py
webpage/: urls.py  utils.py  views.py  webpage_content_processors.py
webpage/management/commands/: check_and_migrate_tec_tt.py  create_relationships.py  run_ontology_script.py
webpage/static/webpage/fundament/: fundament.min.css
webpage/static/webpage/libraries/linkurious.js/plugins/sigma.exporters.graphml/: sigma.exporters.graphml.js
webpage/static/webpage/libraries/linkurious.js/plugins/sigma.plugins.tooltips/: sigma.plugins.tooltips.js
webpage/static/webpage/libraries/linkurious.js/scripts/: check-errors.py  examples-screenshots.py
webpage/static/webpage/libraries/linkurious.js/src/classes/: sigma.classes.graph.js
webpage/templates/browsing/tags/: column_selector.html
webpage/templates/webpage/: 404-error.html  about.html  base.html  index.html  team.html  uri_resolver.html  user_logout.html
webpage/templates/webpage/tags/: social_media.html
webpage/templatetags/: webpage_extras.py
