[tool.poetry]
name = "apis-rdf-devops"
version = "0.1.0"
description = "Generic APIS project for auto devops"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.11.2, <3.12"
whitenoise = "^6.3.0"
sentry-sdk = "*"
dj-database-url = "^1.2.0"
gunicorn = "^20.1.0"
acdh-django-charts = "^0.5.3"
django-allow-cidr = "^0.6.0"
mysqlclient = "^2.1.1"
django-extensions = "^3.2.1"
django-csp = "^3.7"
#viecpro-vis = "^0.1.10"
pyzotero = "^1.5.5"
apis-core = { path = "apis-core", develop = false }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.1"
pylint = "^2.16.2"
jupyter = "^1.0.0"
jupyter-tabnine = "^1.2.3"
black = "^23.1.0"
flake8 = "^6.0.0"

[tool.poetry.group.bibsonomy]
optional = true

[tool.poetry.group.bibsonomy.dependencies]
apis-bibsonomy = { path = "../apis-bibsonomy", develop = false }

[tool.poetry.group.highlighter]
optional = true

[tool.poetry.group.highlighter.dependencies]
apis-highlighter = { path = "../apis_highlighter", develop = false }

[tool.poetry.group.frischmuth]
optional = true

[tool.poetry.group.frischmuth.dependencies]
django-multiselectfield = "^0.1.12"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
