[tool.poetry]
name = "apis-rdf-devops"
version = "0.1.0"
description = "Generic APIS project for auto devops"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
django = ">=4.1,<4.2"
whitenoise = "^5.2.0"
sentry-sdk = "*"
dj-database-url = "^0.5.0"
gunicorn = "^20.0.4"
django-allow-cidr = "^0.3.1"
mysqlclient = "^2.0.3"
django-extensions = "^3.1.3"
django-csp = "^3.7"
pyzotero = "^1.5.5"
apis-core = { path = "apis-core", develop = false }
webpage = { git = "https://github.com/acdh-oeaw/apis-webpage.git", branch = "main" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.1.0"
pylint = "^2.6.0"
jupyter = "^1.0.0"
jupyter-tabnine = "^1.2.3"
black = "^22.12.0"
flake8 = "^6.0.0"

[tool.poetry.group.sicprod]
optional = true
[tool.poetry.group.sicprod.dependencies]
apis-bibsonomy = { git = "https://github.com/acdh-oeaw/apis-bibsonomy.git", branch = "main" }
apis-highlighter = { git = "https://github.com/acdh-oeaw/apis_highlighter.git", branch = "main" }

[tool.poetry.group.sicprod-test]
optional = true
[tool.poetry.group.sicprod-test.dependencies]
apis-bibsonomy = { git = "https://github.com/acdh-oeaw/apis-bibsonomy.git", branch = "main" }
apis-highlighter = { git = "https://github.com/acdh-oeaw/apis_highlighter.git", branch = "main" }

[tool.poetry.group.frischmuth]
optional = true
[tool.poetry.group.frischmuth.dependencies]
django-multiselectfield = "^0.1.12"

[tool.poetry.group.jelinek]
optional = true
[tool.poetry.group.jelinek.dependencies]
psycopg2 = "^2.9.6"

[tool.poetry.group.manmax]
optional = true
[tool.poetry.group.manmax.dependencies]
apis-bibsonomy = { git = "https://github.com/acdh-oeaw/apis-bibsonomy.git", branch = "main" }
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
